crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__alternates_with_transform.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{foo | bar | baz :str}\"#)"
---
{ foo
| bar
| baz
: str}
