crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__back_to_back_exprs.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{foo . bar}{baz.qux}\"#)"
---
{ foo.bar
}
{ baz.qux
}
