crates/rtd-display/src/v2/snapshots/sui_display__v2__parser__tests__bool_literals.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{true | false}\"#)"
---
{ true
| false
}
